# plasma-mediacenter

./: .gitignore  .reviewboardrc  CMakeLists.txt  CREDITS  ChangeLog  LICENSE  Messages.sh  README  README.odb  TODO  config-plasma-mediacenter.h.cmake  odb.patch  plasma-mediacenter.desktop.cmake
applets/mediabrowser/: CMakeLists.txt  Messages.sh  abstractmediaitemview.cpp  abstractmediaitemview.h  browsingwidget.cpp  browsingwidget.h  filegrid.qml  fileviewitem.cpp  fileviewitem.h  general.ui  gridview.cpp  gridview.h  listview.cpp  listview.h  localconfig.ui  mediabrowser.cpp  mediabrowser.h  mediaitemdelegate.cpp  mediaitemdelegate.h  plasma-applet-mediabrowser.desktop  qmlhomeview.cpp  qmlhomeview.h  startupmodel.cpp  startupmodel.h  viewitem.cpp  viewitem.h
applets/mediacontroller/: CMakeLists.txt  controller.cpp  controller.h  metadata.desktop  plasma-applet-mediacontroller.desktop
applets/mediainfobarold/: CMakeLists.txt  plasma-applet-mediainfobar.desktop
applets/mediawelcome/: CMakeLists.txt  backendmodel.cpp  backendmodel.h  homeview.qml  mediawelcome.cpp  mediawelcome.h  plasma-applet-mediawelcome.desktop  qmlviewwrapper.cpp  qmlviewwrapper.h
applets/playlist/: CMakeLists.txt  Messages.sh  config.ui  plasma-applet-playlist.desktop  playlist.cpp  playlist.h  playlistapplet.cpp  playlistapplet.h  playlistdelegate.cpp  playlistdelegate.h  playlistwidget.cpp  playlistwidget.h  treeview.cpp  treeview.h
applets/test/: CMakeLists.txt  plasma-applet-mctest.desktop  plasma-applet-playlist.desktop  test.cpp  test.h
browsingbackends/dvbbackend/: CMakeLists.txt  dvbbackend.cpp  dvbbackend.desktop  dvbbackend.h
browsingbackends/eventsbackend/: CMakeLists.txt  eventsbackend.cpp  eventsbackend.desktop  eventsbackend.h  eventsfiltermodel.cpp  eventsfiltermodel.h  eventsmodel.cpp  eventspicturesmodel.cpp  eventspicturesmodel.h
browsingbackends/favoritesbackend/: CMakeLists.txt  favoritesbackend.cpp  favoritesbackend.desktop  favoritesbackend.h
browsingbackends/localfiles/: CMakeLists.txt  configbase.ui  localfilesabstractbackend.cpp  localfilesabstractbackend.h  localfilesabstractmodel.cpp  localfilesabstractmodel.h  localplacesmodel.cpp  localplacesmodel.h  localthumbnailprovider.cpp  localthumbnailprovider.h
browsingbackends/metadatamusicbackend/: CMakeLists.txt  alwaysexpandedmetadatamodel.cpp  alwaysexpandedmetadatamodel.h  categoriesmodel.cpp  metadatamusicbackend.cpp  metadatamusicbackend.desktop  metadatamusicbackend.h  metadatamusicmodel.cpp  metadatamusicmodel.h  metadatamusicsongsmodel.cpp  metadatamusicsongsmodel.h
browsingbackends/metadatapicturebackend/: CMakeLists.txt  metadatapicturebackend.cpp  metadatapicturebackend.desktop  metadatapicturebackend.h  metadatapicturemodel.cpp  metadatapicturemodel.h
browsingbackends/metadatavideobackend/: CMakeLists.txt  metadatavideobackend.cpp  metadatavideobackend.desktop  metadatavideobackend.h  metadatavideomodel.cpp  metadatavideomodel.h
browsingbackends/recentmediabackend/: CMakeLists.txt  recentmediabackend.cpp  recentmediabackend.desktop  recentmediabackend.h  recentmediamodel.cpp  recentmediamodel.h
browsingbackends/seriesbackend/: CMakeLists.txt  cluster.cpp  cluster.h  clusterer.cpp  clusterer.h  pmcseries.desktop  seriesbackend.cpp  seriesbackend.h  seriesmodel.cpp  seriesmodel.h
components/: AutoHide.qml  BreezeBlock.qml  CMakeLists.txt  CategoriesBrowser.qml  MediaGridBrowser.qml  MediaGridItemDelegate.qml  MediaInfoPanel.qml  MediaItemDelegateLogic.js  MediaLineItemDelegate.qml  MediaListBrowser.qml  Search.qml  SmartBrowser.qml  SplitBrowser.qml  TabBrowser.qml  qmldir
components/aboutpmc/: AboutListModel.qml  AboutPMC.qml  DropShadowText.qml
components/common/: FocusIndicator.qml  ItemIconComponent.qml  ItemImageComponent.qml  LabelOverlay.qml  ListMediaItem.qml  MediaItem.qml  MediaItemDelegate.qml  MediaLineItem.qml  MediaRow.qml
components/gridbrowser/: GridBrowser.qml  ItemIconComponent.qml  LabelOverlay.qml  MediaItem.qml  MediaItemDelegateLogic.js
components/imageviewer/: ImageViewer.qml  PictureStrip.qml  PictureStripDelegate.qml
components/listbrowser/: ListBrowser.qml
components/mediabrowser/: MediaBrowser.qml  MediaItem.qml  MediaItemDelegate.qml  MediaItemDelegateLogic.js  MediaItemHighlight.qml
components/mediacontroller/: MediaController.qml
components/mediainfobar/: MediaInfoBar.qml
components/mediaplayer/: MediaPlayer.qml  MusicStats.qml  StatsLabel.qml
components/mediawelcome/: BackendsListDelegate.qml  CategoriesList.qml  CategoriesListDelegate.qml  CategoriesModel.qml  FilteredBackendsList.qml  HomeScreenFooter.qml  HomeScreenHeader.qml  HomeScreenText.qml  MediaWelcome.qml  RecentlyPlayed.qml  RecentlyPlayedListDelegate.qml
components/picturestrip/: PictureStrip.qml  PictureStripDelegate.qml  PictureStripItemHighlight.qml
components/playlist/: Playlist.qml  PlaylistDelegate.qml
components/popupmenu/: PopupMenu.qml
components/runtimedata/: RuntimeData.qml
components/tabbrowser/: TabBrowser.qml
components/uielements/: qmldir
containments/mediacontainment/: CMakeLists.txt  Messages.sh  mediacontainment.cpp  mediacontainment.h  mediahandler.cpp  mediahandler.h  medialayout.cpp  medialayout.h  medianotificationwidget.cpp  mediatoolbox.h  plasma-applet-mediacontainment.desktop
dataengines/datasource/: CMakeLists.txt  datasource.cpp  datasource.h  plasma-engine-datasource.desktop
dataengines/mediacentercontrol/: CMakeLists.txt  media.cpp  media.h  mediaCenterControl.cpp  mediaCenterControl.h  mediaContainer.cpp  (+10 more)
libs/: CMakeLists.txt  KMediaCollectionConfig.cmake.in  LibMediaConfig.cmake.in  browser.h  mediacenter.cpp  mediacenter.h  mediaobject.cpp  mediaobject.h  mediasource.cpp  mediasource.h  playbackcontrol.cpp  playbackcontrol.h  player.cpp  player.h  playlist.cpp  playlist.h
mediaelements/: CMakeLists.txt  qmldir
plasmawii/: CMakeLists.txt  main.cpp
plugins/: CMakeLists.txt
wiimote/: CMakeLists.txt  infraredimage.cpp  infraredimage.h  main.cpp  wiimote.cpp  wiimote.h  wiimoteinterface.ui  wiimotewidget.cpp  wiimotewidget.h
(+991 files in other folders)
