install(FILES qmldir DESTINATION ${QML_INSTALL_DIR}/org/kde/plasma/mediacenter/elements)
install(DIRECTORY mediabrowser DESTINATION ${QML_INSTALL_DIR}/org/kde/plasma/mediacenter/elements)
install(DIRECTORY mediacontroller DESTINATION ${QML_INSTALL_DIR}/org/kde/plasma/mediacenter/elements)
install(DIRECTORY mediaplayer DESTINATION ${QML_INSTALL_DIR}/org/kde/plasma/mediacenter/elements)
install(DIRECTORY mediawelcome DESTINATION ${QML_INSTALL_DIR}/org/kde/plasma/mediacenter/elements)
#install(DIRECTORY runtimedata DESTINATION ${QML_INSTALL_DIR}/org/kde/plasma/mediacenter/elements)
install(DIRECTORY playlist DESTINATION ${QML_INSTALL_DIR}/org/kde/plasma/mediacenter/elements)
install(DIRECTORY imageviewer DESTINATION ${QML_INSTALL_DIR}/org/kde/plasma/mediacenter/elements)
install(DIRECTORY popupmenu DESTINATION ${QML_INSTALL_DIR}/org/kde/plasma/mediacenter/elements)
